--- a/src/App.css
+++ b/src/App.css
@@ -83,13 +83,54 @@ h5 {
 }
 
 .summonerCardList {
-  
+  padding-top: 30px;
 }
 
 .summonerCard {
-  height: 10vh;
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  background-color: #131e16;
+  height: 100px;
+  transition: background-color 0.3s, color 0.3s;
+}
+.summonerCard:hover {
+  background-color: #223728;
+}
+.summonerIcon {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 20px;
+  margin-left: 10px;
+}
+
+
+
+.cardRank {
+  display: flex;
+  font-size: 22px;
+  color: #888;
+  padding-right: 10px;
+}
+
+.cardContent {
+  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  flex-flow: row;
+  flex-grow: 1;
+}
+
+.cardName {
+  font-size: 22px;
+  color: white;
 }
 
 #root {
   height: 100vh;
 }
+
