--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   --secondary: #38ef7d;
   --white: #fff;
   --gray: #9b9b9b;
+  --cream: #F2E3D6;
 }
 
 
@@ -75,7 +76,7 @@ body {
   align-items: center;
   min-height: 100vh;
   font-size: 1.5rem;
-  background-color:#222222;
+  background-color: #EAD5C2;
 }
 
 h5 {
