--- a/src/App.css
+++ b/src/App.css
@@ -177,7 +177,6 @@ h5 {
 
 .playerBox {
   height: 100px;
-  width: 80vh;
   margin-bottom: 50px;
   display: flex;
   justify-content: center;
@@ -188,7 +187,7 @@ h5 {
 
 .statsBox {
   display: flex;
-  justify-content: right;
+  justify-content: center;
 }
 
 .matchBox {
@@ -200,6 +199,7 @@ h5 {
 
 #root {
   height: 100vh;
-  width: 80vh;
+  width: 120vh;
+  max-width: fit-content;
 }
 
