--- a/src/components/WinRates.css
+++ b/src/components/WinRates.css
@@ -1,10 +1,13 @@
+.leftStats {
+  max-width: 300px;
+  width: 30%;
+}
+
 .win-rates-container{
-    width: 90%;
+    width: 95%;
     max-width: 300px;
-    margin: 20px;
+    padding-top: 4px;
     margin-top: 2px;
-    padding: 20px;
-    padding-top: 5px;
     background-color: rgb(38, 91, 106);
     border-style: solid;
     border-width: 2px;
@@ -12,9 +15,49 @@
     border-radius: 5px;
 }
 
+.pairRow {
+  display:flex;
+  flex-direction: row;
+  padding: 10px;
+  border-style: solid;
+  border-width: 1px;
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  border-color: rgb(58, 147, 145);
+}
+
+.portraitBox {
+  display: flex;
+  flex-direction: row;
+}
+
+.percentageBox {
+  width: 100%;
+}
+
+.percentageBar {
+  height: 100%;
+}
+.percentageBarAnimated {
+  background-color: rgb(58, 147, 145);
+  height: 100%;
+}
+
+.percentageText {
+  padding-top: 10px;
+  padding-left: 8px;
+  text-align: end;
+  padding-right: 4%;
+  height: 100%;
+  vertical-align:middle;
+  color: rgb(143, 187, 186);
+  font-size: 12px;
+}
+
 .wrPortraitContainer {
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
 }
 
 .wrPortraitContainer img {
