--- a/src/components/Match.css
+++ b/src/components/Match.css
@@ -1,104 +1,119 @@
-      
 .matchCard {
-    display: flex;
-    justify-content: center;
-    height: 110px;
-    width: 100%;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    box-shadow: 10px 10px 4px rgba(0, 0, 0, 0.1);
-  }
+  display: flex;
+  justify-content: center;
+  height: fit-content;
+  width: 100%;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  box-shadow: 10px 10px 4px rgba(0, 0, 0, 0.1);
+}
 
-  .Defeat {
-    background-image: linear-gradient(290deg, #442331, #532d3d);
-    border-style: solid;
-    border-radius: 8px;
-    border-color: #803B58;
-    border-width: 2px;
-    color: #B0718C;
-  }
+.Defeat {
+  background-image: linear-gradient(290deg, #442331, #532d3d);
+  border-style: solid;
+  border-radius: 8px;
+  border-color: #803b58;
+  border-width: 2px;
+  color: #b0718c;
+}
 
-  .Victory {
-    background-image: linear-gradient(290deg, #1c2f5b, #233664);
-    border-style: solid;
-    border-radius: 8px;
-    border-color: #3A74C2;
-    border-width: 2px;
-    color: #3A74C2;
-  }
+.Victory {
+  background-image: linear-gradient(290deg, #1c2f5b, #233664);
+  border-style: solid;
+  border-radius: 8px;
+  border-color: #3a74c2;
+  border-width: 2px;
+  color: #3a74c2;
+}
 
-  .leftPlayerBox {
-    display: flex;
-    flex-direction: row;
-    width:35%;
-    height: 100%;
-    align-items: center;
-    font-size: 19px;
+.leftPlayerBox {
+  display: flex;
+  flex-direction: row;
+  width: 35%;
+  height: 100%;
+  align-items: center;
+  font-size: 19px;
 }
 
 .rightPlayerStats {
-    text-align: right;
-    
+  text-align: right;
 }
 
 .leftPlayerStats {
-    text-align: left;
+  text-align: left;
 }
 
- .leftPortraitContainer img {
-    height: 70px;
-    width: 70px;
-    object-fit: cover;
-    margin: 20px;
- }
+.leftPortraitContainer img {
+  height: 70px;
+  width: 70px;
+  object-fit: cover;
+  margin: 20px;
+}
 
- .rightPlayerBox {
-    display: flex;
-    flex-direction: row;
-    width:35%;
-    height: 100%;
-    align-items: center;
-    justify-content: right;
-    font-size: 19px;
- }
+.rightPlayerBox {
+  display: flex;
+  flex-direction: row;
+  width: 35%;
+  height: 100%;
+  align-items: center;
+  justify-content: right;
+  font-size: 19px;
+}
 
- .rightPortraitContainer img {
-    height: 70px;
-    width: 70px;
-    object-fit: cover;
-    margin: 20px;
- }
+.rightPortraitContainer img {
+  height: 70px;
+  width: 70px;
+  object-fit: cover;
+  margin: 20px;
+}
 
- .leftEnemyContainer img {
-    height: 40px;
-    width: 40px;
-    object-fit: cover;
-    margin: 10px;
- }
+.leftEnemyContainer img {
+  height: 40px;
+  width: 40px;
+  object-fit: cover;
+  margin: 10px;
+}
 
- .rightEnemyContainer img {
-    height: 40px;
-    width: 40px;
-    object-fit: cover;
-    margin: 10px;
- }
+.rightEnemyContainer img {
+  height: 40px;
+  width: 40px;
+  object-fit: cover;
+  margin: 10px;
+}
 
 .outcome {
-    font-size: 20px;
-    height: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  font-size: 20px;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .centerMatchBox {
-    width: 30%;
+  width: 30%;
 }
 
 .vsBox {
-    height: 50%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.expandedMatchBox {
+}
+.cardExpandContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.summaryContainer {
+  height: 110px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: fit-content;
 }
