--- a/src/components/Match.css
+++ b/src/components/Match.css
@@ -138,12 +138,33 @@
   padding: 10px;
 }
 
+.combatColumn {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 33%;
+  padding: 10px;
+}
+
+.objColumn {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 33%;
+  padding: 10px;
+}
+
 .graphBar {
   align-self: center;
   height: 30px;
-  width: 90%;
+  width: 100%;
   border-radius: 5px;
+  display: flex;
+  flex-direction: row;
   background-color: rgb(0, 0, 0, 0.3);
+  margin-top: 5px;
 }
 
 .graphLabel {
@@ -153,9 +174,72 @@
 .duoHalf {
   width: 50%;
   height: 100%;
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .enemyHalf {
   width: 50%;
   height: 100%;
+  display: flex;
+  flex-direction: row;
 }
+
+.p1 {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.p2 {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.p1Bar {
+  height: 100%;
+  background-color: #2b8845;
+  border-left: black;
+  border-style: solid;
+  border-left-width: 1px;
+  border-bottom: none;
+  border-right: none;
+  border-top: none;
+
+}
+
+.p2Bar {
+  height: 100%;
+  background-color: #00650c;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+
+.e1Bar {
+  height: 100%;
+  background-color: #591457;
+  border-left: black;
+  border-style: solid;
+  border-left-width: 1px;
+  border-bottom: none;
+  border-top: none;
+
+}
+
+.e2Bar {
+  height: 100%;
+  background-color: #8f2aae;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  border-left: black;
+  border-style: solid;
+  border-left-width: 1px;
+  border-bottom: none;
+  border-top: none;
+  border-right: none;
+}
+
+.statRow {
+  width: 100%;
+  padding-top: 10px;
+}
+
