--- a/src/components/Match.css
+++ b/src/components/Match.css
@@ -126,7 +126,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .expColumn {
