finished expand match columns

--- a/src/components/Match.css
+++ b/src/components/Match.css
@@ -197,45 +197,36 @@
 
 .p1Bar {
   height: 100%;
-  background-color: #2b8845;
-  border-left: black;
-  border-style: solid;
-  border-left-width: 1px;
-  border-bottom: none;
-  border-right: none;
-  border-top: none;
+  background-color: #fea623;
+  background-image: linear-gradient(top, #feb523, #cc6e1b);
+  background-image: -webkit-linear-gradient(top, #feb523, #cc6e1b);
 
 }
 
 .p2Bar {
   height: 100%;
-  background-color: #00650c;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
+  background-color: #fe3923;
+  background-image: linear-gradient(top, #db462c, #b52626);
+  background-image: -webkit-linear-gradient(top, #db462c, #b52626);
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
 .e1Bar {
   height: 100%;
-  background-color: #591457;
-  border-left: black;
-  border-style: solid;
-  border-left-width: 1px;
-  border-bottom: none;
-  border-top: none;
+  background-color: #4a2acc;
+  background-image: linear-gradient(top, #9138b2, #671c83);
+  background-image: -webkit-linear-gradient(top, #9138b2, #671c83);
 
 }
 
 .e2Bar {
   height: 100%;
-  background-color: #8f2aae;
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  border-left: black;
-  border-style: solid;
-  border-left-width: 1px;
-  border-bottom: none;
-  border-top: none;
-  border-right: none;
+  background-color: #5b34bd;
+  background-image: linear-gradient(top, #4e38b2, #40268f);
+  background-image: -webkit-linear-gradient(top, #4e38b2, #40268f);
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .statRow {
@@ -243,3 +234,15 @@
   padding-top: 10px;
 }
 
+.columnIcon {
+  height: 35px;
+  width: 35px;
+}
+
+.greenDiff {
+  color: #179637;
+}
+
+.redDiff {
+  color: #b52233;
+}
